--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,11 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/static/2.jpg" alt="First slide">
+     <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTdjSHbGpYxxVrCSqBoFjjFgSwJ4yyNWbKwuQ&usqp=CAU" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" >
+
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="static/1.jpg" alt="Second slide">
+      <img class="d-block w-100" src="" alt="Second slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src=" " alt="Third slide">
